--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html> 
 <html lang="en"> 
 	<head> 
-		<title>LASTNAME Chapter 4 InClass Notes</title> 
+		<title>WYATT Chapter 4 InClass Notes</title> 
 		<meta charset="utf-8"> 
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.ico" type="image/x-con">
 	</head> 
-    <body> 
+    <body>
+        <div id="container"> 
         <!-- Structural Elements - header, nav, main, footer -->
         <header>
-            <h1>Trillium Media Design</h1>
+            <img src="trilliumbanner.jpg" usemap="#image_map">
+            <area alt="NWMSU" title="NWMSU" href="https://www.nwmissouri.edu" coords="2,1,134,85" shape="rect">
+            </map>
         </header>
         <nav>
             <!-- Anchor tags - specifies hyperlink reference to a file. Relative Links - link to pages on own site. -->
-            <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html"><img src="home.gif"alt="Home" width="120" height="40"> </a>
+            <a href="services.html"><img src="services.gif" alt="Services" width="120" height="40"></a>
+            <a href="contact.html"><img src="contact.gif" alt="Contact" width= "120" height= "40"></a>
         </nav>
         <main>
             <h2>New Media and Web Design</h2>
@@ -35,11 +40,16 @@
                 <li>Determine the General Content and Create a Site Map</li>
                 <li><em>Sketch a Tentative Page Layout</em></li>
             </ul>
-            
+        
         </main>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+            </nav>
         <footer>
-            <small><strong>Copyright &copy; 2019 LASTNAME</strong></small>
+            <small><strong>Copyright &copy; 2019 Wyatt</strong></small>
         </footer>
-
+</div>
     </body> 
 </html> 
