--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- Structural Elements - header, nav, main, footer -->
         <header>
             <img src="trilliumbanner.jpg" usemap="#image_map">
+            <map name="image_map">
             <area alt="NWMSU" title="NWMSU" href="https://www.nwmissouri.edu" coords="2,1,134,85" shape="rect">
             </map>
         </header>
